[package]
name = "probably-net"
version = "0.1.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2018"

[dependencies]
libc = "*"
#probably = { version = "0.3.1", with_serde = true }
probably = { path = "/mnt/c/Users/adams/source/repos/probably/", features = ["with_serde"] }
rmp-serde = { version = "0.15.4" }


[lib]
name = "probably_net"
crate-type = ["cdylib"]
